--- a/_config.yml
+++ b/_config.yml
@@ -15,13 +15,14 @@ include: ["_pages"]
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Site
+
+title: vsamy
 email: vincent.samy@lirmm.fr
-description: > # this means to ignore newlines until "baseurl:"
-  Blah blah
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  vsamy
+
+# For handling post excerpt
 excerpt_separator: <!--more-->
 
 # Build settings
@@ -31,7 +32,6 @@ gems:
   - github-pages
   - jekyll-feed
   - jekyll-redirect-from
-  - jekyll-paginate
 exclude:
   - Gemfile
   - Gemfile.lock
