Fix several errors

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ excerpt_separator: <!--more-->
 # Build settings
 markdown: kramdown 
 theme: jekyll-theme-slate
-gems:
+plugins:
   - github-pages
   - kramdown 
   - jekyll-feed
